kubernetes/backend-cron.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corn-backend-deployment
  namespace: growdeck
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-corn

  template:
    metadata:
      labels:
        app: backend-corn

    spec:
      containers:
        - name: backend-corn
          image: affiefly/offerwall-backend-prod:v0.209
          imagePullPolicy: Always
          command: ["node"]
          args: ["nodeCron.js"]
          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
# apiVersion: batch/v1
# kind: CronJob
# metadata:
#   name: backend-cron
#   namespace: growdeck
# spec:
#   schedule: "*/5 * * * *"
#   jobTemplate:
#     spec:
#       template:
#         spec:
#           containers:
#           - name: backend-cron
#             image: affiefly/offerwall-backend-prod:v0.209
#             command: ["node"]
#             args: ["nodeCron.js"]
#           restartPolicy: OnFailure
