kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: growoduck
  labels:
    app: frontend
spec:
  replicas: 5 # HPA will handle scaling
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: maccotech/macstrom-website:v1.11
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "300m" # Minimum guaranteed CPU
            memory: "512Mi" # Minimum guaranteed RAM
          limits:
            cpu: "1000m" # Max CPU per pod
            memory: "2Gi" # Max RAM per pod
