kubernetes/analytics-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-backend-deployment
  namespace: growdeck
  labels:
    app: analytics-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-backend
  template:
    metadata:
      labels:
        app: analytics-backend
    spec:
      containers:
      - name: analytics-backend
        image: affiefly/analytics-backend-prod:v0.23
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "4Gi"
            cpu: "3000m"

---
apiVersion: v1
kind: Service
metadata:
  name: analytics-backend-service
  namespace: growdeck
  labels:
    app: analytics-backend
spec:
  selector:
    app: analytics-backend
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
