kubernetes/analytics_backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics_backend-deployment
  namespace: growdeck
  labels:
    app: analytics_backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics_backend
  template:
    metadata:
      labels:
        app: analytics_backend
    spec:
      containers:
      - name: analytics_backend
        image: affiefly/offerwall_backend-prod:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "6Gi"
            cpu: "3000m"

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 5

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: analytics_backend-service
  namespace: growdeck
  labels:
    app: analytics_backend
spec:
  selector:
    app: analytics_backend
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
