kubernetes/backend-opentelemetry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-deployment
  namespace: growdeck
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-opentelemetry

  template:
    metadata:
      labels:
        app: backend-opentelemetry

    spec:
      containers:
        - name: backend
          image: affiefly/offerwall-backend-prod:v0.101
          imagePullPolicy: Always
          command: ["node"]
          args: ["instrumentation.mjs"]
          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"


---
apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-service
  namespace: growdeck
  labels:
    app: backend-opentelemetry
spec:
  selector:
    app: backend-opentelemetry
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
