kubernetes/backend-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: growdeck
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-worker

  template:
    metadata:
      labels:
        app: backend-worker

    spec:
      containers:
        - name: backend-worker
          image: affiefly/offerwall-backend-prod:v0.243
          imagePullPolicy: Always
          command: ["node"]
          args: ["bullMQ.js"]
          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"

          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 5000
          #   initialDelaySeconds: 15
          #   periodSeconds: 15
          #   timeoutSeconds: 3
          #   failureThreshold: 5

          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 5000
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
          #   timeoutSeconds: 3
          #   failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: growdeck
  labels:
    app: backend-worker
spec:
  selector:
    app: backend-worker
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP

---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: backend-worker-hpa
#   namespace: growdeck
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: backend-worker
#   minReplicas: 1
#   maxReplicas: 10
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 80 # Scale up if CPU usage exceeds 75%
#   - type: Resource
#     resource:
#       name: memory
#       target:
#         type: Utilization
#         averageUtilization: 80
