kubernetes/backend_offerwall.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-offerwall-deployment
  namespace: growdeck
spec:
  replicas: 5

  selector:
    matchLabels:
      app: backend-offerwall

  template:
    metadata:
      labels:
        app: backend-offerwall

    spec:
      containers:
        - name: backend-offerwall
          image: affiefly/offerwall-backend-prod:v0.18
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: growdeck
  labels:
    app: backend-offerwall
spec:
  selector:
    app: backend-offerwall
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
