kubernetes/geo-core-api-backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geo-core-api-backend-deployment
  namespace: growdeck
  labels:
    app: geo-core-api-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: geo-core-api-backend
  template:
    metadata:
      labels:
        app: geo-core-api-backend
    spec:
      containers:
      - name: geo-core-api-backend
        image: affiefly/geo-core-api-backend-prod:v0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "6Gi"
            cpu: "3000m"

        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 5000
        #   initialDelaySeconds: 15
        #   periodSeconds: 15
        #   timeoutSeconds: 3
        #   failureThreshold: 5

        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 5000
        #   initialDelaySeconds: 20
        #   periodSeconds: 10
        #   timeoutSeconds: 3
        #   failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: geo-core-api-backend-service
  namespace: growdeck
  labels:
    app: geo-core-api-backend
spec:
  selector:
    app: geo-core-api-backend
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
