kubernetes/growdeck-landing-page.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: growdeck-frontend-deployment
  namespace: growdeck
  labels:
    app: emp-panel-frontend
spec:
  replicas: 2 # HPA will handle scaling
  selector:
    matchLabels:
      app: growdeck-frontend
  template:
    metadata:
      labels:
        app: growdeck-frontend
    spec:
      containers:
      - name: growdeck-frontend
        image: affiefly/growdeck-landing-frontend-prod:v0.20
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m" # Minimum guaranteed CPU
            memory: "128Mi" # Minimum guaranteed RAM
          limits:
            cpu: "500m" # Max CPU per pod
            memory: "512Mi" # Max RAM per pod
---
apiVersion: v1
kind: Service
metadata:
  name: growdeck-frontend-service
  namespace: growdeck
spec:
  selector:
    app: growdeck-frontend
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
