kubernetes/playweb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playweb-frontend-deployment
  namespace: growdeck
  labels:
    app: playweb-frontend
spec:
  replicas: 2 # HPA will handle scaling
  selector:
    matchLabels:
      app: playweb-frontend
  template:
    metadata:
      labels:
        app: playweb-frontend
    spec:
      containers:
      - name: playweb-frontend
        image: affiefly/playweb-frontend-prod:v0.11
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m" # Minimum guaranteed CPU
            memory: "128Mi" # Minimum guaranteed RAM
          limits:
            cpu: "500m" # Max CPU per pod
            memory: "512Mi" # Max RAM per pod
---
apiVersion: v1
kind: Service
metadata:
  name: playweb-frontend-service
  namespace: growdeck
spec:
  selector:
    app: playweb-frontend
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
