kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: growoduck
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
