kubernetes/webwall-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webwall-frontend-deployment
  namespace: growdeck
  labels:
    app: webwall-frontend
spec:
  replicas: 2 # HPA will handle scaling
  selector:
    matchLabels:
      app: webwall-frontend
  template:
    metadata:
      labels:
        app: webwall-frontend
    spec:
      containers:
      - name: webwall-frontend
        image: affiefly/webwall-frontend-prod:v0.6
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m" # Minimum guaranteed CPU
            memory: "128Mi" # Minimum guaranteed RAM
          limits:
            cpu: "500m" # Max CPU per pod
            memory: "512Mi" # Max RAM per pod
---
apiVersion: v1
kind: Service
metadata:
  name: webwall-frontend-service
  namespace: growdeck
spec:
  selector:
    app: webwall-frontend
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
